--- a/src/SeriLog.Sinks.RedisStream/SeriLog.Sinks.RedisStream.csproj
+++ b/src/SeriLog.Sinks.RedisStream/SeriLog.Sinks.RedisStream.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>Serilog.Sinks.RedisStream</PackageId>
+    <Version>1.0.7</Version>
+    <Authors>guarrdon</Authors>
+    <Company>EnvisionThen</Company>
+    <Title>Redis Stream Serilog Sink</Title>
+    <Description>Custom Serilog sink to push log messages to a Redis Stream</Description>
+    <PackageLicenseUrl>https://github.com/Guarrdon/Serilog.Sinks.RedisStream/blob/master/LICENSE</PackageLicenseUrl>
+    <License>https://github.com/Guarrdon/Log4Net.RedisStream/blob/master/LICENSE</License>
+    <PackageProjectUrl>https://github.com/Guarrdon/Serilog.Sinks.RedisStream</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Guarrdon/Serilog.Sinks.RedisStream</RepositoryUrl>
+    <PackageTags>Serilog;Redis;RedisStreams;Logging</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
